--- a/doc/poddoc/man/gspl-charge.1
+++ b/doc/poddoc/man/gspl-charge.1
@@ -128,65 +128,83 @@
 .rm #[ #] #H #V #F C
 .\" ========================================================================
 .\"
-.IX Title "SPULIST 1"
-.TH SPULIST 1 "2008-07-12" "GNUspool Release 23" "GNUspool Print Manager"
+.IX Title "GSPL-CHARGE 1"
+.TH GSPL-CHARGE 1 "2008-08-18" "GNUspool Release 1" "GNUspool Print Manager"
 .SH "NAME"
-spulist \- list permissions for users
+gspl\-charge \- display/update user charges
 .SH "SYNOPSIS"
 .IX Header "SYNOPSIS"
-\&\fBspulist\fR
+\&\fBgspl-charge\fR
 [ \fI\-options\fR ]
+[ user ] ...
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
-\&\fBspulist\fR lists the permissions of users known to the \fBGNUspool\fR
-print spooler system.
+\&\fBgspl-charge\fR displays and/or updates the charges recorded by
+\&\fBGNUspool\fR against various users specified on the command line, or
+all users if none are specified.
 .PP
-The invoking user must have \fIedit admin file\fR permission to use
-\&\fBspulist\fR.
+It is only available to users with the \fIEdit admin file\fR privilege.
+.PP
+Charges relate to jobs which have originated on the machine on which
+\&\fIgspl-charge\fR was invoked. The actual charging rate is determined by the
+machine on which the job is printed.
 .SH "OPTIONS"
 .IX Header "OPTIONS"
 Note that the order of treatment, letters and keywords described below
 may be modified by editing the file \fIrest.help\fR \-
 see \fIspsyntax\fR\|(5).
 
-The environment variable on which options are supplied is \f(CW\*(C`SPULIST\*(C'\fR
-and the environment variable to specify the help file is
-\&\f(CW\*(C`SPRESTCONF\*(C'\fR.
+The environment variable on which options are supplied is \f(CW\*(C`GSPL_CHARGE\*(C'\fR and the
+environment variable to specify the help file is \f(CW\*(C`SPRESTCONF\*(C'\fR.
 .IP "\-? or +explain" 4
 .IX Item "-? or +explain"
 causes a summary of the other options to be displayed without taking
 further action.
-.IP "\-D or +default\-format" 4
-.IX Item "-D or +default-format"
-cancel the \fB\-F\fR option and revert to the default format.
-.IP "\-d or +default\-line" 4
-.IX Item "-d or +default-line"
-display an initial line giving the default options (default).
-.IP "\-F or +format" 4
-.IX Item "-F or +format"
-format the output according to the \fIformat\fR string given.
-.IP "\-H or +header" 4
-.IX Item "-H or +header"
-generate a header for each column of the output appropriate for the format.
-.IP "\-N or +no\-header" 4
-.IX Item "-N or +no-header"
-cancel the \fB\-H\fR option.
-.IP "\-n or +numeric\-sort" 4
-.IX Item "-n or +numeric-sort"
-sort the list of users by the numeric user id (default).
-.IP "\-S or +no\-user\-lines" 4
-.IX Item "-S or +no-user-lines"
-suppress the user lines. It is an error to invoke this and the \fB\-s\fR
-option as well.
-.IP "\-s or +no\-default\-line" 4
-.IX Item "-s or +no-default-line"
-suppress the initial line giving the default options.
-.IP "\-U or +user\-lines" 4
-.IX Item "-U or +user-lines"
-display the user lines (default).
-.IP "\-u or +user\-sort" 4
-.IX Item "-u or +user-sort"
-sort the list of users by the user name.
+.IP "\-C or +consolidate" 4
+.IX Item "-C or +consolidate"
+causes a consolidation record to be written for each user mentioned in
+the file, which summarises the charges to date for each user. The
+records remain in the file, this creating a current balance of account
+record to save processing entries in the accounts file.
+.IP "\-c \fIfee\fR or +add\-charge \fIfee\fR" 4
+.IX Item "-c fee or +add-charge fee"
+causes the specified \fIfee\fR to be added to the charge for the
+specified user or users, or all users if none are given.
+.Sp
+If combined with a print option (\fB\-p\fR or \fB\-P\fR), the print is done
+after the charge is applied.
+.IP "\-K or +cancel\-flags" 4
+.IX Item "-K or +cancel-flags"
+Cancels all previously-set options \fB\-p\fR, \fB\-P\fR, \fB\-z\fR, \fB\-C\fR and
+\&\fB\-R\fR. Useful if you want to start again from some indeterminate state
+in a configuration file.
+.IP "\-P or +print\-full" 4
+.IX Item "-P or +print-full"
+causes the full log of charges for the specified user or users, or all
+users if none are given, to be displayed on standard output.
+.IP "\-p or +print\-users" 4
+.IX Item "-p or +print-users"
+(the default if no other options are specified) causes the charge
+summary for the specified user or users, or all users if none are
+given, to be displayed on standard output.
+.IP "\-R or +reset\-file" 4
+.IX Item "-R or +reset-file"
+causes all records to be deleted from the file except for
+consolidation records for each user with a non-zero charge. If the
+charge for each user is zero (as a result of applying the \fB\-z\fR option
+perhaps), then the file will be left empty.
+.Sp
+Note that the spool scheduler \fIspshed\fR\|(8) should not be running when
+this option is invoked.
+.IP "\-z or +zero\-charge" 4
+.IX Item "-z or +zero-charge"
+clears to zero the charges for the specified user or users, or all
+users if none are given. This is done by appending an appropriate
+record or records to the charge file, the previous information (as
+displayed by \fB\-P\fR will still be available.
+.Sp
+If combined with a print option (\fB\-p\fR or \fB\-P\fR), the print is done
+before the option is applied.
 .IP "+freeze\-current" 4
 .IX Item "+freeze-current"
 Save all the current options in a \fI.gnuspool\fR file in the current
@@ -195,137 +213,6 @@ directory.
 .IX Item "+freeze-home"
 Save all the current options in a \fI.gnuspool\fR file in the user's home
 directory.
-.Sh "Format argument."
-.IX Subsection "Format argument."
-The format string consists of a string containing the following
-character sequences, which are replaced by various user permission
-parameters. The string may contain various other printing characters
-or spaces as required.
-.PP
-Each column is padded on the right to the length of the longest
-entry.
-.PP
-If a header is requested, the appropriate abbreviation is obtained
-from the message file and inserted.
-.ie n .IP "%a" 4
-.el .IP "\f(CW%a\fR" 4
-.IX Item "%a"
-allowed form types
-.ie n .IP "%b" 4
-.el .IP "\f(CW%b\fR" 4
-.IX Item "%b"
-allowed printer types
-.ie n .IP "%c" 4
-.el .IP "\f(CW%c\fR" 4
-.IX Item "%c"
-allowed class code
-.ie n .IP "%d" 4
-.el .IP "\f(CW%d\fR" 4
-.IX Item "%d"
-default priority
-.ie n .IP "%f" 4
-.el .IP "\f(CW%f\fR" 4
-.IX Item "%f"
-default form type
-.ie n .IP "%l" 4
-.el .IP "\f(CW%l\fR" 4
-.IX Item "%l"
-minimum priority
-.ie n .IP "%m" 4
-.el .IP "\f(CW%m\fR" 4
-.IX Item "%m"
-maximum priority
-.ie n .IP "%n" 4
-.el .IP "\f(CW%n\fR" 4
-.IX Item "%n"
-maximum copies
-.ie n .IP "%o" 4
-.el .IP "\f(CW%o\fR" 4
-.IX Item "%o"
-default printer
-.ie n .IP "%p" 4
-.el .IP "\f(CW%p\fR" 4
-.IX Item "%p"
-privileges
-.ie n .IP "%u" 4
-.el .IP "\f(CW%u\fR" 4
-.IX Item "%u"
-user name.
-.ie n .IP "%v" 4
-.el .IP "\f(CW%v\fR" 4
-.IX Item "%v"
-\&\f(CW\*(C`L\*(C'\fR if the user is a valid user
-.PP
-The string \f(CW\*(C`DEFAULT\*(C'\fR replaces the user name in the default values
-line.
-.PP
-Note that the various strings are read from the message file, so it is
-possible to modify them as required by the user.
-.PP
-The default format is
-.PP
-.Vb 1
-\&        %u %d %l %m %n %c %p
-.Ve
-.Sh "Privileges format"
-.IX Subsection "Privileges format"
-The following are output via the \f(CW%p\fR format. Note that the actual
-strings are read from the message file, and are the same ones as are
-used by \fIspuchange\fR\|(1). \f(CW\*(C`ALL\*(C'\fR is displayed if all privileges are set.
-.IP "Adm" 8
-.IX Item "Adm"
-edit admin file
-.IP "Stp" 8
-.IX Item "Stp"
-stop scheduler
-.IP "Form" 8
-.IX Item "Form"
-select forms other than restriction pattern
-.IP "Otherp" 8
-.IX Item "Otherp"
-select printers other than restriction pattern
-.IP "Cpri" 8
-.IX Item "Cpri"
-change priority once queued
-.IP "Otherj" 8
-.IX Item "Otherj"
-edit other users' jobs.
-.IP "Prinq" 8
-.IX Item "Prinq"
-select printer list
-.IP "Hgo" 8
-.IX Item "Hgo"
-stop and start printers
-.IP "Anyp" 8
-.IX Item "Anyp"
-select any priority once queued
-.IP "Cdef" 8
-.IX Item "Cdef"
-change own default priority within range
-.IP "Addp" 8
-.IX Item "Addp"
-add and delete printers
-.IP "Cover" 8
-.IX Item "Cover"
-override class
-.IP "Unq" 8
-.IX Item "Unq"
-unqueue jobs
-.IP "Votj" 8
-.IX Item "Votj"
-view (but not change) other users' jobs
-.IP "Remj" 8
-.IX Item "Remj"
-access remote jobs
-.IP "Remp" 8
-.IX Item "Remp"
-access remote printers
-.IP "Accessj" 8
-.IX Item "Accessj"
-access non-displayed job attributes
-.IP "Freeze" 8
-.IX Item "Freeze"
-freeze parameters from display
 .SH "FILES"
 .IX Header "FILES"
 \&\fI~/.gnuspool\fR
@@ -338,16 +225,18 @@ configuration file (current directory)
 message file
 .SH "ENVIRONMENT"
 .IX Header "ENVIRONMENT"
-.IP "\s-1SPULIST\s0" 4
-.IX Item "SPULIST"
+.IP "GSPL-CHARGE" 4
+.IX Item "GSPL-CHARGE"
 space-separated options to override defaults.
-.IP "\s-1SPRESTCONF\s0" 4
-.IX Item "SPRESTCONF"
+.IP "\s-1RESTCONF\s0" 4
+.IX Item "RESTCONF"
 location of alternative help file.
+.SH "NOTES"
+.IX Header "NOTES"
+It is intended to deprecate this in the next release.
 .SH "SEE ALSO"
 .IX Header "SEE ALSO"
-\&\fIspuchange\fR\|(1),
-\&\fIspuser\fR\|(1),
+\&\fIgspl\-user\fR\|(1),
 \&\fIspsyntax\fR\|(5),
 \&\fIgnuspool.conf\fR\|(5),
 \&\fIgnuspool.hosts\fR\|(5).
