--- a/doc/poddoc/man/gspl-lpq.1
+++ b/doc/poddoc/man/gspl-lpq.1
@@ -128,56 +128,73 @@
 .rm #[ #] #H #V #F C
 .\" ========================================================================
 .\"
-.IX Title "XIPASSWD 8"
-.TH XIPASSWD 8 "2008-07-12" "GNUspool Release 23" "GNUspool Print Manager"
+.IX Title "GSPL-LPQ 1"
+.TH GSPL-LPQ 1 "2008-08-18" "GNUspool Release 1" "GNUspool Print Manager"
 .SH "NAME"
-xipasswd \- set passwords for user and API
+gspl\-lpq \- display job list on LPD protocol servers
 .SH "SYNOPSIS"
 .IX Header "SYNOPSIS"
-\&\fBxipassd\fR
-[ \-\fIu\fR user ]
-[ \-\fIp\fR password ]
-[ \-\fIf\fR ]
-[ \-\fId\fR ]
-[ \-\fIF\fR file ]
+\&\fBgspl-lpq\fR
+[ \fI\-l\fR ]
+[ \fI\-s\fR ]
+\&\fIprinter\fR
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
-\&\fBxipasswd\fR sets a password for the current user or a specified user
-if \-\fBu\fR is given. This is separate and distinct from the user's login
-password. This password is used by the web interfaces, the Windows
-interface and the \s-1API\s0.
-.PP
-The reason for doing this is because it is considered insecure to
-possibly repeatedly try login passwords from user programs.
-.PP
-If \fIany\fR users have a password set in this way, then \fIall\fR users
-will have to to have a password in the file to use any of the
-interfaces requiring a password.
-.PP
-Unlike the Unix \fIpasswd\fR\|(1) routine, the old password is not prompted
-for and there is no confirmation.
+\&\fBgspl-lpq\fR obtains and outputs a list of pending jobs on an external
+print server supporting the \s-1LPD\s0 protocol.
 .SH "OPTIONS"
 .IX Header "OPTIONS"
-.IP "\fB\-u\fR \fIuser\fR" 4
-.IX Item "-u user"
-Set password for given user. This may only be for other than the
-current user if \fBxipasswd\fR is invoked by \fBroot\fR.
-.IP "\fB\-p\fR \fIpassword\fR" 4
-.IX Item "-p password"
-Specify the password to be set other than prompting for it.
-.IP "\fB\-f\fR" 4
-.IX Item "-f"
-It is normally considered an error to include a password for \fBroot\fR
-for the same reasons that the password file is separate. However this
-option may be set to insist upon it.
-.IP "\fB\-d\fR" 4
-.IX Item "-d"
-Delete the user's password from the file.
-.IP "\fB\-F\fR \fIfile\fR" 4
-.IX Item "-F file"
-Use \fIfile\fR to hold the password. The default if no \fIfile\fR is given
-is \fIxipasswd\fR. Any number of \fB\-F\fR options may be
-given to set up several password files at once.
+Note that the order of treatment, letters and keywords described below
+may be modified by editing the file \fIsplpd.help\fR \-
+see \fIspsyntax\fR\|(5).
+.PP
+The environment variable on which options are supplied is \f(CW\*(C`GSPL_LPQ\*(C'\fR and the
+environment variable to specify the help file is \f(CW\*(C`LPDINTCONF\*(C'\fR.
+.IP "\-? or +explain" 4
+.IX Item "-? or +explain"
+Causes a summary of the other options to be displayed without taking
+further action.
+.IP "\-l or +long\-list" 4
+.IX Item "-l or +long-list"
+Produce a long listing.
+.IP "\-s or +short\-list" 4
+.IX Item "-s or +short-list"
+Produce a short listing (default).
+.IP "+freeze\-current" 4
+.IX Item "+freeze-current"
+Save all the current options in a \fI.gnuspool\fR file in the current
+directory.
+.IP "+freeze\-home" 4
+.IX Item "+freeze-home"
+Save all the current options in a \fI.gnuspool\fR file in the user's home
+directory.
+.SH "FILES"
+.IX Header "FILES"
+\&\fI~/.gnuspool\fR
+configuration file (home directory)
+.PP
+\&\fI .gnuspool\fR
+configuration file (current directory)
+.PP
+\&\fIsplpd.help\fR
+message file
+.SH "ENVIRONMENT"
+.IX Header "ENVIRONMENT"
+.IP "\s-1SPLPD\s0" 4
+.IX Item "SPLPD"
+space-separated options to override defaults.
+.IP "\s-1LPDINTCONF\s0" 4
+.IX Item "LPDINTCONF"
+location of alternative help file.
+.SH "SEE ALSO"
+.IX Header "SEE ALSO"
+\&\fIgspl\-lprm\fR\|(1),
+\&\fIspsyntax\fR\|(5),
+\&\fIxtlpc\fR\|(8).
+.SH "DIAGNOSTICS"
+.IX Header "DIAGNOSTICS"
+Various diagnostics are read and printed as required from the message
+file, by default \fIsplpd.help\fR.
 .SH "AUTHOR"
 .IX Header "AUTHOR"
 John M Collins, Xi Software Ltd.
